fixes for layout on mobile sizes

--- a/_sass/component--cta-row.scss
+++ b/_sass/component--cta-row.scss
@@ -5,22 +5,32 @@
 	height: 600px;
 	@include flexbox;
 	@include align-items(center);
+	@include tablet-down{
+		height: auto;
+		padding: 72px 0;
+	}
 
 	&__heading{
 		color: white;
-		@include font-size(3rem, 3rem, 3rem, 3rem, 3rem);
+		@include font-size(2rem, 2.5rem, 3rem, 3rem, 3rem);
 		font-weight: 500;
+		margin-bottom: 32px;
 	}
 
 	&__subheading{
 		color: white;
-		@include font-size(1.5rem, 1.5rem, 1.5rem, 1.5rem, 1.5rem);
+		@include font-size(1.25rem, 1.5rem, 1.5rem, 1.5rem, 1.5rem);
 		font-weight: 400;
+		margin: 0;
 	}
 
 	&__col-text{
 		@include flexbox;
 		@include flex-direction(column);
 		@include justify-content(center);
+		@include tablet-down{
+			text-align: center;
+			margin-bottom: 72px;
+		}
 	}
 }
